--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Firstname Lastname's Resumé</title>
+    <title>Leona Brodarić's Resumé</title>
   </head>
   <!-- End of the head -->
 
@@ -49,7 +49,7 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="fw-bolder">Firstname Lastname</h1>
+          <h1 class="fw-bolder">Leona Brodarić</h1>
           <h5 class="fst-italic tagline">Your expert in creative marketing.</h5>
         </div>
       </header>
@@ -174,7 +174,7 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
+                  230749@buas.nl
                 </a>
               </li>
               <li class="contact-item">
