font, colour, pictures and text changed
font, colour, pictures and text changed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- End of the head -->
 
   <!-- Start of the body, which contains everything visible on the page -->
-  <body class="d-flex flex-column h-100 justify-content-between">
+  <body>
 
     <!--
       We use a Bootstrap container to align contents.
@@ -43,14 +43,14 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/portrait.svg" alt="Portrait of Firstname Lastname" width="160">
+          <img class="w-100 rounded-circle my-3" src="images/leona.png" alt="Portrait of Firstname Lastname" width="160">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder">Leona Brodarić</h1>
-          <h5 class="fst-italic tagline">Your expert in creative marketing.</h5>
+          <h5 class="fst-italic tagline">Your expert in UI/UX design and creative storytelling!</h5>
         </div>
       </header>
 
@@ -84,12 +84,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Digital products for health education, Breda University of Applied Sciences</h4>
+                  <h5>October&ndash;December 2024</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
+                    <li>In collaboration with Georgia Southern University</li>
+                    <li>Developing an interactive, educational prototype for pregnant women who consume alcohol</li>
+                    <li>Experience with Figma and Adobe Illustrator</li>
                     <li>Part of my studies at Breda University of Applied Sciences</li>
                   </ul>
                 </div>
@@ -102,9 +103,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
+                  <h4>Supermarket Employee, Jumbo</h4>
+                  <h5>2024&nbsp;&ndash;&nbsp;now</h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
+                  <ul class="biography-details list-unstyled">
+                    <li>Teamwork</li>
+                    <li>Flexibility</li>
+                  </ul>
                 </div>
               </li>
 
@@ -124,12 +129,11 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
-                  <h5>2018&nbsp;&ndash;&nbsp;now</h5>
+                  <h5>2023&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Interactive specialized student</li>
+                    <li>BIP Intercultural marketing project</li>
                   </ul>
                 </div>
               </li>
@@ -140,10 +144,12 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h4>High School Diploma, 4th Gymnasium Grammar School in Zagreb</h4>
+                  <h5>2019-2023</h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Audiovisual media specialization</li>
+                    <li>English proficiency</li>
+                    <li>Networking project for UNESCO</li>
+                    <li>Digital products for sustainability education</li>
                   </ul>
                 </div>
               </li>
@@ -172,27 +178,27 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:230749@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  230749@buas.nl
+                  Email
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/leona-brodaric-10a0a32b8/" target="_blank">
+                  <img class="contact-icon" src="images/icons/linkedin.svg" alt="Linkedin">
+                  LinkedIn
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
+                <a class="d-flex align-items-center" href="https://github.com/leonabro" target="_blank">
+                  <img class="contact-icon" src="images/icons/github.svg" alt="GitHub">
                   GitHub Profile
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
-                  <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
-                  TikTok @bredauniversityas
+                <a class="d-flex align-items-center" href="https://www.instagram.com/brod0lom/" target="_blank">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Instagram">
+                  Instagram
                 </a>
               </li>
             </ul>
@@ -205,7 +211,7 @@
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Dutch</h5>
+                <h5 class="language-name w-50">Croatian</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-100"></div>
@@ -224,14 +230,6 @@
                 <h5 class="language-name w-50">Spanish</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
-                </div>
-              </li>
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">German</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
                 </div>
@@ -244,9 +242,11 @@
           <section class="my-3 aside-section">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
-              <li class="skill-item">Driving Licence</li>
+              <li class="skill-item">Microsoft Office 365</li>
+              <li class="skill-item">Video Editing</li>
+              <li class="skill-item">Storytelling</li>
+              <li class="skill-item">Leadership</li>
+              <li class="skill-item">Management</li>
             </ul>
           </section>
 
@@ -255,8 +255,9 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Video Games</li>
+              <li class="skill-item">Movies</li>
+              <li class="skill-item">Acting</li>
             </ul>
           </section>
 
